# serenity

./: .gitignore
.github/workflows/: cmake.yml  dev-container.yml  discord.yml  label-pull-requests.yml  libjs-test262.yml  lintcommits.yml  manpages.yml  pvs-studio-static-analysis.yml  serenity-js-artifacts.yml  social-media.yml  sonar-cloud-static-analysis.yml  wasm.yml
AK/: Assertions.h  BumpAllocator.h  CMakeLists.txt  Error.cpp  Error.h  FloatingPoint.h  IntrusiveRedBlackTree.h  LexicalPath.cpp  LexicalPath.h  Platform.h  Singleton.h  StackInfo.cpp  Time.cpp  Time.h  Types.h  Windows.h
AK/Windows/: Types.h  dirent.h  fork.h  mman.h  termios.cpp  termios.h
Base/res/themes/: Default.ini
Ladybird/: BrowserWindow.cpp  BrowserWindow.h  CMakeLists.txt  Settings.cpp  Settings.h  SettingsDialog.cpp  Tab.cpp  Utilities.cpp  WebContentView.cpp  main.cpp
Ladybird/Qt/: WebContentView.cpp
Ladybird/WebContent/: CMakeLists.txt  WebContentThread.cpp  WebContentThread.h  main.cpp
Meta/: serenity.ps1  serenity.py
Meta/CMake/: common_compile_options.cmake  lagom_compile_options.cmake  libweb_generators.cmake
Meta/Lagom/: CMakeLists.txt
Meta/Lagom/Fuzzers/: FuzzilliJs.cpp
Meta/Lagom/Tools/: CMakeLists.txt
Meta/Lagom/Tools/CodeGenerators/LibLocale/: GenerateDateTimeFormatData.cpp  GenerateLocaleData.cpp
Meta/Lagom/Tools/CodeGenerators/LibTimeZone/: GenerateTimeZoneData.cpp
Meta/Lagom/Tools/CodeGenerators/LibWeb/: GenerateCSSPropertyID.cpp  GenerateCSSValueID.cpp
Meta/Lagom/Tools/CodeGenerators/LibWeb/BindingsGenerator/: IDLGenerators.cpp
Meta/Lagom/Tools/ConfigureComponents/: main.cpp
Meta/Lagom/Tools/IPCMagicLinter/: main.cpp
Tests/AK/: TestDuration.cpp  TestFormat.cpp  TestTime.cpp  TestUFixedBigInt.cpp
Tests/LibCore/: TestLibCoreIODevice.cpp
Tests/LibGfx/: TestFontHandling.cpp  TestICCProfile.cpp
Tests/LibJS/: test262-runner.cpp
Tests/LibSQL/: TestSqlBtreeIndex.cpp  TestSqlDatabase.cpp  TestSqlHashIndex.cpp  TestSqlStatementExecution.cpp  TestSqlValueAndTuple.cpp
Tests/LibTLS/: CMakeLists.txt  TestTLSHandshake.cpp
Tests/LibTimeZone/: CMakeLists.txt  TestTimeZone.cpp
Tests/LibVideo/: TestVP9Decode.cpp
Userland/Applications/SystemMonitor/: MemoryStatsWidget.cpp  ProcessModel.cpp  ProcessModel.h
Userland/Applications/VideoPlayer/: main.cpp
Userland/DevTools/HackStudio/: HackStudioWidget.cpp  ProjectTemplate.cpp  ProjectTemplate.h  main.cpp
Userland/DevTools/UserspaceEmulator/: main.cpp
Userland/Libraries/LibArchive/: Tar.h
Userland/Libraries/LibAudio/: WavLoader.h
Userland/Libraries/LibCodeComprehension/Cpp/: Tests.cpp
Userland/Libraries/LibCompress/: BrotliDictionary.cpp
Userland/Libraries/LibCore/: AnonymousBuffer.cpp  AnonymousBuffer.h  AnonymousBufferWindows.cpp  CMakeLists.txt  Command.cpp  Command.h  ConfigFile.cpp  DateTime.cpp  DeprecatedFileWindows.cpp  DirIterator.cpp  Directory.cpp  Directory.h  DirectoryEntry.cpp  Event.h  EventLoop.cpp  EventLoop.h  EventLoopImplementation.cpp  EventLoopImplementationWindows.cpp  EventLoopImplementationWindows.h  File.cpp  IODevice.cpp  IODevice.h  LocalServer.cpp  MappedFile.cpp  MappedFile.h  Notifier.cpp  Notifier.h  Object.cpp  Process.h  ProcessWindows.cpp  SessionManagement.cpp  SessionManagement.h  SharedCircularQueue.h  Socket.cpp  Socket.h  SocketAddress.h  SocketWindows.cpp  StandardPaths.cpp  Stream.h  System.cpp  (+6 more)
Userland/Libraries/LibCore/Windows/: DeprecatedFile.cpp  DirIterator.cpp  File.cpp  Socket.cpp  Stream.cpp  System.cpp
Userland/Libraries/LibDNS/: Answer.cpp  Answer.h  CMakeLists.txt  Packet.cpp  Packet.h
Userland/Libraries/LibDebug/: DebugSession.cpp
Userland/Libraries/LibFileSystem/: FileSystem.cpp
Userland/Libraries/LibGL/GL/: glplatform.h
Userland/Libraries/LibGPU/: Driver.cpp  Driver.h
Userland/Libraries/LibGemini/: Job.cpp
Userland/Libraries/LibGfx/: Bitmap.cpp  DDSLoader.cpp  ShareableBitmap.cpp  SystemTheme.cpp
Userland/Libraries/LibGfx/Font/: FontDatabase.cpp
Userland/Libraries/LibGfx/ICC/: BinaryWriter.cpp  Profile.cpp
Userland/Libraries/LibGfx/ImageFormats/: BMPWriter.h  DDSLoader.cpp
Userland/Libraries/LibHTTP/: HttpRequest.cpp  HttpRequest.h  Job.cpp
Userland/Libraries/LibIDL/: IDLParser.cpp
Userland/Libraries/LibIPC/: Connection.cpp  Connection.h  Decoder.cpp  Encoder.cpp  Message.h
Userland/Libraries/LibJS/: CMakeLists.txt
Userland/Libraries/LibJS/Bytecode/: Op.h  (+1 more)
Userland/Libraries/LibLine/: Editor.cpp  Editor.h  InternalFunctions.cpp
Userland/Libraries/LibMain/: Main.cpp
Userland/Libraries/LibSQL/: CMakeLists.txt  Heap.cpp  SQLClient.cpp
Userland/Libraries/LibSyntax/: Language.cpp
Userland/Libraries/LibTLS/: CMakeLists.txt  Certificate.h  TLSv12.cpp
Userland/Libraries/LibTest/: CrashTest.cpp  JavaScriptTestRunner.h  JavaScriptTestRunnerMain.cpp  TestRunnerUtil.h  TestSuite.cpp  TestSuite.h
Userland/Libraries/LibThreading/: BackgroundAction.cpp  ConditionVariable.h  Mutex.h  Thread.cpp  Thread.h
Userland/Libraries/LibTimeZone/: TimeZone.cpp
Userland/Libraries/LibVideo/: MatroskaReader.cpp  MatroskaReader.h
Userland/Libraries/LibWasm/: CMakeLists.txt
Userland/Libraries/LibWasm/AbstractMachine/: AbstractMachine.h
Userland/Libraries/LibWasm/WASI/: Wasi.cpp
Userland/Libraries/LibWeb/: CMakeLists.txt  Dump.h  Forward.h
Userland/Libraries/LibWebSocket/: WebSocket.cpp
Userland/Libraries/LibWebView/: ViewImplementation.cpp  WebContentClient.cpp
Userland/Services/: CMakeLists.txt
Userland/Services/FileOperation/: CMakeLists.txt  main.cpp
Userland/Services/InspectorServer/: CMakeLists.txt
Userland/Services/LookupServer/: CMakeLists.txt  MulticastDNS.h
Userland/Services/RequestServer/: CMakeLists.txt  ConnectionFromClient.cpp  Protocol.cpp
Userland/Services/WebContent/: ConnectionFromClient.cpp  ConnectionFromClient.h  PageHost.cpp
Userland/Services/WebDriver/: Session.cpp  Session.h
Userland/Services/WebServer/: Client.cpp  main.cpp
Userland/Shell/: Shell.h
Userland/Utilities/: adjtime.cpp  gunzip.cpp  gzip.cpp  headless-browser.cpp  matroska.cpp  ntpquery.cpp  sql.cpp  tar.cpp
(+83 files in other folders)
